--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "angular": "^1.5.8",
+    "bootstrap": "^3.3.7",
     "brunch": "^2.9.1",
     "express": "^4.14.0",
     "morgan": "^1.7.0",
