--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "angular": "^1.5.8",
+    "angular-route": "^1.5.8",
+    "angular-ui-router": "^0.3.2",
     "bootstrap": "^3.3.7",
     "brunch": "^2.9.1",
     "express": "^4.14.0",
